[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/npc/sklep.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Levels/Portal2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/npc/sklep.gd" type="Script" id=3]
[ext_resource path="res://Assets/Loot/Potions/Potion50.png" type="Texture" id=4]
[ext_resource path="res://Assets/Loot/Weapons/blade.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 17 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 20.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 47, 34 )

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="E" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -66 )
z_index = 2
frames = SubResource( 3 )
playing = true

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 24, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -24, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -24, 40 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 24, 40 )
texture = ExtResource( 5 )

[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
